--- a/src/app/consultation/consultation.component.html
+++ b/src/app/consultation/consultation.component.html
@@ -39,51 +39,53 @@
       <strong>{{ 'consultation.aCall' | translate }}</strong>
     </h3>
 
-    <div class="actions-button-wrapper">
-      <button
-        (click)="makeCall(false)"
-        class="submit-btn"
-        mat-button
-        *ngIf="
-          videoDevices.length > 0 &&
-          currentCall &&
-          currentCall.type === 'videoCall'
-        ">
-        <mat-icon svgIcon="camera"></mat-icon>&nbsp;&nbsp;
-        {{ 'consultation.joinVideoCall' | translate }}
-      </button>
+    <div class="buttons">
+      <div class="actions-button-wrapper">
+        <button
+          (click)="makeCall(false)"
+          mat-raised-button
+          color="primary"
+          *ngIf="
+            videoDevices.length > 0 &&
+            currentCall &&
+            currentCall.type === 'videoCall'
+          ">
+          <mat-icon svgIcon="camera"></mat-icon>&nbsp;&nbsp;
+          {{ 'consultation.joinVideoCall' | translate }}
+        </button>
 
-      <button
-        (click)="makeCall(false)"
-        class="submit-btn"
-        mat-button
-        *ngIf="videoDevices.length > 0 && !currentCall">
-        <mat-icon svgIcon="camera"></mat-icon>&nbsp;&nbsp;
-        {{ 'consultation.videoCall' | translate }}
-      </button>
+        <button
+          (click)="makeCall(false)"
+          mat-raised-button
+          color="primary"
+          *ngIf="videoDevices.length > 0 && !currentCall">
+          <mat-icon svgIcon="camera"></mat-icon>&nbsp;&nbsp;
+          {{ 'consultation.videoCall' | translate }}
+        </button>
 
-      <button
-        (click)="makeCall(true)"
-        class="submit-btn"
-        mat-button
-        *ngIf="!currentCall">
-        <mat-icon svgIcon="mic"></mat-icon> &nbsp;&nbsp;
-        {{ 'consultation.audioCall' | translate }}
-      </button>
+        <button
+          (click)="makeCall(true)"
+          mat-raised-button
+          color="primary"
+          *ngIf="!currentCall">
+          <mat-icon svgIcon="mic"></mat-icon> &nbsp;&nbsp;
+          {{ 'consultation.audioCall' | translate }}
+        </button>
 
-      <button
-        (click)="makeCall(true)"
-        class="submit-btn"
-        mat-button
-        *ngIf="currentCall && currentCall.type === 'audioCall'">
-        <mat-icon svgIcon="mic"></mat-icon> &nbsp;&nbsp;
-        {{ 'consultation.joinAudioCall' | translate }}
-      </button>
+        <button
+          (click)="makeCall(true)"
+          mat-raised-button
+          color="primary"
+          *ngIf="currentCall && currentCall.type === 'audioCall'">
+          <mat-icon svgIcon="mic"></mat-icon> &nbsp;&nbsp;
+          {{ 'consultation.joinAudioCall' | translate }}
+        </button>
 
-      <button (click)="openConfiguration()" class="submit-btn" mat-button>
-        <mat-icon svgIcon="info"></mat-icon> &nbsp;&nbsp;
-        {{ 'consultation.configuration' | translate }}
-      </button>
+        <button (click)="openConfiguration()" mat-raised-button color="primary">
+          <mat-icon svgIcon="info"></mat-icon> &nbsp;&nbsp;
+          {{ 'consultation.configuration' | translate }}
+        </button>
+      </div>
     </div>
   </div>
 
@@ -98,53 +100,59 @@
 
   <div id="configuration" *ngIf="showConfiguration">
     <div class="container">
-      <h2>{{ 'consultation.microAndCameraConfiguration' | translate }}</h2>
+      <h1 mat-dialog-title>
+        {{ 'consultation.microAndCameraConfiguration' | translate }}
+      </h1>
 
-      <div class="left">
-        <p>{{ 'consultation.microSelection' | translate }}</p>
+      <div mat-dialog-content>
+        <div class="left">
+          <p>{{ 'consultation.microSelection' | translate }}</p>
 
-        <mat-form-field class="device--select" *ngIf="audioDevices.length > 0">
-          <mat-select
-            matNativeControl
-            [required]="audioDevices.length > 1"
-            [(ngModel)]="audioDeviceId"
-            [disabled]="audioDevices.length < 2"
-            (selectionChange)="initAudioPublisher()">
-            <mat-option
-              *ngFor="let device of audioDevices; let i = index"
-              [value]="device.deviceId">
-              {{ device.label || 'device ' + (i + 1) }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+          <mat-form-field
+            class="device--select"
+            *ngIf="audioDevices.length > 0">
+            <mat-select
+              [required]="audioDevices.length > 1"
+              [(ngModel)]="audioDeviceId"
+              [disabled]="audioDevices.length < 2">
+              <mat-option
+                *ngFor="let device of audioDevices; let i = index"
+                [value]="device.deviceId">
+                {{ device.label || 'device ' + (i + 1) }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
 
-        <div id="volume-container">
-          <div id="volume-slider" [style.width.%]="100 - volumeLevel"></div>
+          <div id="volume-container">
+            <div id="volume-slider" [style.width.%]="100 - volumeLevel"></div>
+          </div>
+        </div>
+
+        <div class="right">
+          <p>{{ 'consultation.cameraSelection' | translate }}</p>
+
+          <mat-form-field
+            class="device--select"
+            *ngIf="videoDevices.length > 0">
+            <mat-select
+              [required]="videoDevices.length > 1"
+              [(ngModel)]="videoDeviceId"
+              [disabled]="videoDevices.length < 2">
+              <mat-option
+                *ngFor="let device of videoDevices; let i = index"
+                [value]="device.deviceId">
+                {{ device.label || 'device ' + (i + 1) }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
       </div>
 
-      <div class="right">
-        <p>{{ 'consultation.cameraSelection' | translate }}</p>
-
-        <mat-form-field class="device--select" *ngIf="videoDevices.length > 0">
-          <mat-select
-            matNativeControl
-            [required]="videoDevices.length > 1"
-            [(ngModel)]="videoDeviceId"
-            [disabled]="videoDevices.length < 2"
-            (selectionChange)="initVideoPublisher()">
-            <mat-option
-              *ngFor="let device of videoDevices; let i = index"
-              [value]="device.deviceId">
-              {{ device.label || 'device ' + (i + 1) }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+      <div mat-dialog-actions>
+        <button mat-flat-button color="primary" (click)="closeConfiguration()">
+          {{ 'consultation.close' | translate }}
+        </button>
       </div>
-
-      <button class="submit-btn" mat-button (click)="closeConfiguration()">
-        {{ 'consultation.close' | translate }}
-      </button>
     </div>
   </div>
 </div>
