--- a/src/app/filter-modal/filter-modal.component.scss
+++ b/src/app/filter-modal/filter-modal.component.scss
@@ -3,15 +3,6 @@
 }
 
 .label {
-  color: black;
+  color: var(--app-black);
 }
 
-.clear-btn {
-  margin-bottom: 1rem;
-}
-
-.apply-button {
-  background-color: var(--primary-color);
-  color: #ffffff;
-
-}
