--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -37,7 +37,7 @@
               </mat-form-field>
 
 
-              <button *ngIf="!loading" class="submit-btn" mat-button type="submit">
+              <button *ngIf="!loading" color="primary" mat-flat-button type="submit">
                 {{ 'forgotPassword.submit' | translate }}
               </button>
 
