--- a/src/app/forgot-password/forgot-password.component.scss
+++ b/src/app/forgot-password/forgot-password.component.scss
@@ -1,8 +1,8 @@
-
 .example-form {
+  width: 100%;
   min-width: 150px;
   max-width: 500px;
-  width: 100%;
+  text-align: center;
   &.separated {
     margin-top: 40px;
     padding-top: 30px;
@@ -89,11 +89,6 @@ h4 {
   width: 160px;
   height: 48px;
   color: var(--primary-color);
-}
-
-input {
-  color: white;
-  caret-color: white;
 }
 
 .loading {
