--- a/src/app/invitations/invitation-already-accepted-dialog.html
+++ b/src/app/invitations/invitation-already-accepted-dialog.html
@@ -6,5 +6,5 @@
   <p>{{ 'inviteForm.cantUpdateAcceptedInvite' | translate }}</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close>{{ 'overlay.close' | translate }}</button>
+  <button mat-flat-button color="primary" mat-dialog-close>{{ 'overlay.close' | translate }}</button>
 </div>
