--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -86,7 +86,7 @@
             </mat-error>
           </mat-form-field>
 
-          <button *ngIf="!loading" class="submit-btn" mat-button type="submit">
+          <button *ngIf="!loading"  color="primary" mat-flat-button type="submit">
             {{ "resetPassword.save" | translate }}
           </button>
 
