--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,10 @@
   width: 100%;
 }
 
+mat-drawer {
+  border-right: 1px solid rgb(209, 209, 209);
+}
+
 .sidenav {
   z-index: 9 !important;
   width: 100px;
