--- a/src/app/filter-modal/filter-modal.component.html
+++ b/src/app/filter-modal/filter-modal.component.html
@@ -11,7 +11,9 @@
       mat-raised-button
       *ngIf="appLiedFiltersCount"
       [mat-dialog-close]="'clear'"
-      class="clear-btn secondary-button-outlined">
+      class="mb-12"
+      color="primary"
+      >
       {{ 'filter.clear' | translate }}
     </button>
     <mat-accordion multi>
@@ -48,12 +50,12 @@
   </div>
 </mat-dialog-content>
 <mat-dialog-actions [align]="'end'">
-  <button mat-raised-button mat-dialog-close class="secondary-button-outlined">
+  <button mat-raised-button mat-dialog-close color="primary">
     {{ 'filter.cancel' | translate }}
   </button>
   <button
-    mat-button
-    class="apply-button primary-button"
+    mat-flat-button
+    color="primary"
     [mat-dialog-close]="getSelectedFilters()">
     Apply
   </button>
