--- a/src/app/invite-link/invite-link.component.html
+++ b/src/app/invite-link/invite-link.component.html
@@ -1,6 +1,6 @@
-<h2 class="title">
+<h1 mat-dialog-title>
   {{ 'sendInviteLink.title' | translate }}
-</h2>
+</h1>
 <div mat-dialog-content class="dialog-content">
   <div class="field-container">
     <div class="expert-link-wrapper">
@@ -21,13 +21,17 @@
           [cdkCopyToClipboard]="data.link"></mat-icon>
       </div>
 
-      <button
-        mat-button
-        class="secondary-button-outlined"
-        (click)="onNoClick()"
-        type="button">
-        {{ 'sendInviteLink.close' | translate }}
-      </button>
+
     </div>
   </div>
+</div>
+
+<div mat-dialog-actions>
+    <button
+            mat-stroked-button
+            color="primary"
+            (click)="onNoClick()"
+            type="button">
+        {{ 'sendInviteLink.close' | translate }}
+    </button>
 </div>
