--- a/src/app/reset-password/reset-password.component.scss
+++ b/src/app/reset-password/reset-password.component.scss
@@ -19,45 +19,12 @@
 
 .example-full-width {
   width: 100%;
-  height: 50px;
-  padding: 0px;
-}
-
-.example-full-width input {
-  height: 100%;
 }
 
 .container {
   width: 400px;
   margin: auto;
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  ::ng-deep .mat-focused .mat-form-field-label {
-    /*change color of label*/
-    color: white !important;
-  }
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  ::ng-deep.mat-form-field-underline {
-    /*change color of underline*/
-    background-color: white !important;
-  }
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  ::ng-deep.mat-form-field-ripple {
-    /*change color of underline when focused*/
-    background-color: white !important;
-  }
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-  ::ng-deep .mat-form-field-label {
-    /*change color of label*/
-    color: white !important;
-  }
+  text-align: center;
 }
 
 .at {
@@ -79,28 +46,16 @@ ng-container {
 }
 
 .wrap {
+  top: 0;
   width: 100%;
   height: 100%;
-  background-image: url("/assets/bg-splash@2x.png");
-  background-size: 100% 100%;
-  position: absolute;
-  top: 0;
-  position: fixed;
   display: flex;
+  position: fixed;
   align-items: center;
-}
-
-.saml-login {
-  .redirect-btn {
-    margin: auto;
-    display: block;
-    background-color: #ffff;
-    border-radius: 60px;
-    text-align: center;
-    height: 48px;
-    color: var(--primary-color);
-    padding-top: 5px;
-  }
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("/assets/bg-splash@2x.png");
 }
 
 h4 {
@@ -127,32 +82,15 @@ input {
 }
 
 mat-form-field {
-  height: 35px;
-  font-size: 1.3em;
   margin: 20px auto;
 }
 
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px var(--primary-color) inset !important;
-}
-
-input:-webkit-autofill {
-  -webkit-text-fill-color: white !important;
-}
 
 .loading {
-  margin-top: 20px;
   display: flex;
+  margin-top: 20px;
   align-items: center;
   justify-content: center;
-
-  &::ng-deep .mat-mdc-progress-spinner circle,
-  .mat-mdc-progress-spinner circle {
-    stroke: white !important;
-  }
 }
 
 .error {
@@ -161,21 +99,8 @@ input:-webkit-autofill {
   text-align: center;
 }
 
-.resend-btn {
-  margin: auto;
-  display: block;
-  margin-top: 20px;
-
-  // border-radius: 60px;
-  text-align: center;
-  // width: 160px;
-  // height: 48px;
-  color: white;
-}
-
 .error--loading {
   margin-top: 20px;
-
   min-height: 80px;
 }
 
@@ -183,15 +108,6 @@ input:-webkit-autofill {
   width: 100%;
   display: flex;
   align-items: center;
-
-  mat-form-field {
-    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-    ::ng-deep .mat-form-field-label {
-      left: 0 !important;
-    }
-  }
 }
 
 .row {
@@ -230,13 +146,3 @@ input:-webkit-autofill {
   color: var(--primary-color);
 }
 
-.reset-password-form {
-  ::ng-deep {
-    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-    /*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-    .mat-form-field-label {
-      left: 0 !important;
-    }
-  }
-}
